parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> content
Rule 1     content -> dayinfo
Rule 2     content -> defaultproject
Rule 3     dayinfo -> DAY EOL projectsdata
Rule 4     projectsdata -> projectsdata changeprojectinfo projectdata
Rule 5     changeprojectinfo -> PROJECT PROJECTNAME EOL
Rule 6     projectsdata -> changeprojectinfo projectdata
Rule 7     projectsdata -> projectdata
Rule 8     projectdata -> activitiesdatamult
Rule 9     projectdata -> partialactivitiesdatamult
Rule 10    activitiesdatamult -> activitiesdatamult activitiesdata
Rule 11    activitiesdatamult -> activitiesdata
Rule 12    activitiesdata -> intervals activities
Rule 13    partialactivitiesdatamult -> activitiesdatamult partialactivitiesdata
Rule 14    partialactivitiesdatamult -> partialactivitiesdata activitiesdatamult
Rule 15    partialactivitiesdatamult -> activitiesdatamult partialactivitiesdata activitiesdatamult
Rule 16    partialactivitiesdatamult -> partialactivitiesdata
Rule 17    partialactivitiesdata -> partialintervals activities
Rule 18    defaultproject -> DEFAULTPROJECT PROJECTNAME EOL
Rule 19    intervals -> intervals interval
Rule 20    intervals -> interval
Rule 21    interval -> TIME TIME EOL
Rule 22    partialintervals -> intervals semiinterval
Rule 23    partialintervals -> semiinterval
Rule 24    semiinterval -> TIME EOL
Rule 25    activities -> activity
Rule 26    activities -> activities activity
Rule 27    activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
Rule 28    taskidentifier -> TASKIDENTIFIER
Rule 29    taskidentifier -> NA

Terminals, with rules where they appear

ACTIVITY             : 27
DAY                  : 3
DEFAULTPROJECT       : 18
EOL                  : 3 5 18 21 24 27
LPARENTHESIS         : 27
NA                   : 29
PROJECT              : 5
PROJECTNAME          : 5 18
RPARENTHESIS         : 27
SEPARATOR            : 27
TASKIDENTIFIER       : 28
TIME                 : 21 21 24
TITLE                : 27
error                : 

Nonterminals, with rules where they appear

activities           : 12 17 26
activitiesdata       : 10 11
activitiesdatamult   : 8 10 13 14 15 15
activity             : 25 26
changeprojectinfo    : 4 6
content              : 0
dayinfo              : 1
defaultproject       : 2
interval             : 19 20
intervals            : 12 19 22
partialactivitiesdata : 13 14 15 16
partialactivitiesdatamult : 9
partialintervals     : 17
projectdata          : 4 6 7
projectsdata         : 3 4
semiinterval         : 22 23
taskidentifier       : 27

Parsing method: LALR

state 0

    (0) S' -> . content
    (1) content -> . dayinfo
    (2) content -> . defaultproject
    (3) dayinfo -> . DAY EOL projectsdata
    (18) defaultproject -> . DEFAULTPROJECT PROJECTNAME EOL

    DAY             shift and go to state 5
    DEFAULTPROJECT  shift and go to state 2

    content                        shift and go to state 4
    dayinfo                        shift and go to state 1
    defaultproject                 shift and go to state 3

state 1

    (1) content -> dayinfo .

    $end            reduce using rule 1 (content -> dayinfo .)


state 2

    (18) defaultproject -> DEFAULTPROJECT . PROJECTNAME EOL

    PROJECTNAME     shift and go to state 6


state 3

    (2) content -> defaultproject .

    $end            reduce using rule 2 (content -> defaultproject .)


state 4

    (0) S' -> content .



state 5

    (3) dayinfo -> DAY . EOL projectsdata

    EOL             shift and go to state 7


state 6

    (18) defaultproject -> DEFAULTPROJECT PROJECTNAME . EOL

    EOL             shift and go to state 8


state 7

    (3) dayinfo -> DAY EOL . projectsdata
    (4) projectsdata -> . projectsdata changeprojectinfo projectdata
    (6) projectsdata -> . changeprojectinfo projectdata
    (7) projectsdata -> . projectdata
    (5) changeprojectinfo -> . PROJECT PROJECTNAME EOL
    (8) projectdata -> . activitiesdatamult
    (9) projectdata -> . partialactivitiesdatamult
    (10) activitiesdatamult -> . activitiesdatamult activitiesdata
    (11) activitiesdatamult -> . activitiesdata
    (13) partialactivitiesdatamult -> . activitiesdatamult partialactivitiesdata
    (14) partialactivitiesdatamult -> . partialactivitiesdata activitiesdatamult
    (15) partialactivitiesdatamult -> . activitiesdatamult partialactivitiesdata activitiesdatamult
    (16) partialactivitiesdatamult -> . partialactivitiesdata
    (12) activitiesdata -> . intervals activities
    (17) partialactivitiesdata -> . partialintervals activities
    (19) intervals -> . intervals interval
    (20) intervals -> . interval
    (22) partialintervals -> . intervals semiinterval
    (23) partialintervals -> . semiinterval
    (21) interval -> . TIME TIME EOL
    (24) semiinterval -> . TIME EOL

    PROJECT         shift and go to state 15
    TIME            shift and go to state 10

    interval                       shift and go to state 9
    projectsdata                   shift and go to state 11
    activitiesdatamult             shift and go to state 12
    semiinterval                   shift and go to state 13
    changeprojectinfo              shift and go to state 14
    intervals                      shift and go to state 16
    activitiesdata                 shift and go to state 17
    partialintervals               shift and go to state 18
    partialactivitiesdata          shift and go to state 19
    projectdata                    shift and go to state 20
    partialactivitiesdatamult      shift and go to state 21

state 8

    (18) defaultproject -> DEFAULTPROJECT PROJECTNAME EOL .

    $end            reduce using rule 18 (defaultproject -> DEFAULTPROJECT PROJECTNAME EOL .)


state 9

    (20) intervals -> interval .

    TIME            reduce using rule 20 (intervals -> interval .)
    TASKIDENTIFIER  reduce using rule 20 (intervals -> interval .)
    NA              reduce using rule 20 (intervals -> interval .)


state 10

    (21) interval -> TIME . TIME EOL
    (24) semiinterval -> TIME . EOL

    TIME            shift and go to state 23
    EOL             shift and go to state 22


state 11

    (3) dayinfo -> DAY EOL projectsdata .
    (4) projectsdata -> projectsdata . changeprojectinfo projectdata
    (5) changeprojectinfo -> . PROJECT PROJECTNAME EOL

    $end            reduce using rule 3 (dayinfo -> DAY EOL projectsdata .)
    PROJECT         shift and go to state 15

    changeprojectinfo              shift and go to state 24

state 12

    (8) projectdata -> activitiesdatamult .
    (10) activitiesdatamult -> activitiesdatamult . activitiesdata
    (13) partialactivitiesdatamult -> activitiesdatamult . partialactivitiesdata
    (15) partialactivitiesdatamult -> activitiesdatamult . partialactivitiesdata activitiesdatamult
    (12) activitiesdata -> . intervals activities
    (17) partialactivitiesdata -> . partialintervals activities
    (19) intervals -> . intervals interval
    (20) intervals -> . interval
    (22) partialintervals -> . intervals semiinterval
    (23) partialintervals -> . semiinterval
    (21) interval -> . TIME TIME EOL
    (24) semiinterval -> . TIME EOL

    PROJECT         reduce using rule 8 (projectdata -> activitiesdatamult .)
    $end            reduce using rule 8 (projectdata -> activitiesdatamult .)
    TIME            shift and go to state 10

    interval                       shift and go to state 9
    semiinterval                   shift and go to state 13
    intervals                      shift and go to state 16
    activitiesdata                 shift and go to state 25
    partialintervals               shift and go to state 18
    partialactivitiesdata          shift and go to state 26

state 13

    (23) partialintervals -> semiinterval .

    TASKIDENTIFIER  reduce using rule 23 (partialintervals -> semiinterval .)
    NA              reduce using rule 23 (partialintervals -> semiinterval .)


state 14

    (6) projectsdata -> changeprojectinfo . projectdata
    (8) projectdata -> . activitiesdatamult
    (9) projectdata -> . partialactivitiesdatamult
    (10) activitiesdatamult -> . activitiesdatamult activitiesdata
    (11) activitiesdatamult -> . activitiesdata
    (13) partialactivitiesdatamult -> . activitiesdatamult partialactivitiesdata
    (14) partialactivitiesdatamult -> . partialactivitiesdata activitiesdatamult
    (15) partialactivitiesdatamult -> . activitiesdatamult partialactivitiesdata activitiesdatamult
    (16) partialactivitiesdatamult -> . partialactivitiesdata
    (12) activitiesdata -> . intervals activities
    (17) partialactivitiesdata -> . partialintervals activities
    (19) intervals -> . intervals interval
    (20) intervals -> . interval
    (22) partialintervals -> . intervals semiinterval
    (23) partialintervals -> . semiinterval
    (21) interval -> . TIME TIME EOL
    (24) semiinterval -> . TIME EOL

    TIME            shift and go to state 10

    interval                       shift and go to state 9
    activitiesdatamult             shift and go to state 12
    semiinterval                   shift and go to state 13
    intervals                      shift and go to state 16
    activitiesdata                 shift and go to state 17
    partialintervals               shift and go to state 18
    partialactivitiesdata          shift and go to state 19
    projectdata                    shift and go to state 27
    partialactivitiesdatamult      shift and go to state 21

state 15

    (5) changeprojectinfo -> PROJECT . PROJECTNAME EOL

    PROJECTNAME     shift and go to state 28


state 16

    (12) activitiesdata -> intervals . activities
    (19) intervals -> intervals . interval
    (22) partialintervals -> intervals . semiinterval
    (25) activities -> . activity
    (26) activities -> . activities activity
    (21) interval -> . TIME TIME EOL
    (24) semiinterval -> . TIME EOL
    (27) activity -> . taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
    (28) taskidentifier -> . TASKIDENTIFIER
    (29) taskidentifier -> . NA

    TIME            shift and go to state 10
    TASKIDENTIFIER  shift and go to state 31
    NA              shift and go to state 32

    activities                     shift and go to state 29
    interval                       shift and go to state 30
    semiinterval                   shift and go to state 33
    taskidentifier                 shift and go to state 34
    activity                       shift and go to state 35

state 17

    (11) activitiesdatamult -> activitiesdata .

    TIME            reduce using rule 11 (activitiesdatamult -> activitiesdata .)
    PROJECT         reduce using rule 11 (activitiesdatamult -> activitiesdata .)
    $end            reduce using rule 11 (activitiesdatamult -> activitiesdata .)


state 18

    (17) partialactivitiesdata -> partialintervals . activities
    (25) activities -> . activity
    (26) activities -> . activities activity
    (27) activity -> . taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
    (28) taskidentifier -> . TASKIDENTIFIER
    (29) taskidentifier -> . NA

    TASKIDENTIFIER  shift and go to state 31
    NA              shift and go to state 32

    activities                     shift and go to state 36
    activity                       shift and go to state 35
    taskidentifier                 shift and go to state 34

state 19

    (14) partialactivitiesdatamult -> partialactivitiesdata . activitiesdatamult
    (16) partialactivitiesdatamult -> partialactivitiesdata .
    (10) activitiesdatamult -> . activitiesdatamult activitiesdata
    (11) activitiesdatamult -> . activitiesdata
    (12) activitiesdata -> . intervals activities
    (19) intervals -> . intervals interval
    (20) intervals -> . interval
    (21) interval -> . TIME TIME EOL

    PROJECT         reduce using rule 16 (partialactivitiesdatamult -> partialactivitiesdata .)
    $end            reduce using rule 16 (partialactivitiesdatamult -> partialactivitiesdata .)
    TIME            shift and go to state 39

    interval                       shift and go to state 9
    activitiesdatamult             shift and go to state 37
    intervals                      shift and go to state 38
    activitiesdata                 shift and go to state 17

state 20

    (7) projectsdata -> projectdata .

    PROJECT         reduce using rule 7 (projectsdata -> projectdata .)
    $end            reduce using rule 7 (projectsdata -> projectdata .)


state 21

    (9) projectdata -> partialactivitiesdatamult .

    PROJECT         reduce using rule 9 (projectdata -> partialactivitiesdatamult .)
    $end            reduce using rule 9 (projectdata -> partialactivitiesdatamult .)


state 22

    (24) semiinterval -> TIME EOL .

    TASKIDENTIFIER  reduce using rule 24 (semiinterval -> TIME EOL .)
    NA              reduce using rule 24 (semiinterval -> TIME EOL .)


state 23

    (21) interval -> TIME TIME . EOL

    EOL             shift and go to state 40


state 24

    (4) projectsdata -> projectsdata changeprojectinfo . projectdata
    (8) projectdata -> . activitiesdatamult
    (9) projectdata -> . partialactivitiesdatamult
    (10) activitiesdatamult -> . activitiesdatamult activitiesdata
    (11) activitiesdatamult -> . activitiesdata
    (13) partialactivitiesdatamult -> . activitiesdatamult partialactivitiesdata
    (14) partialactivitiesdatamult -> . partialactivitiesdata activitiesdatamult
    (15) partialactivitiesdatamult -> . activitiesdatamult partialactivitiesdata activitiesdatamult
    (16) partialactivitiesdatamult -> . partialactivitiesdata
    (12) activitiesdata -> . intervals activities
    (17) partialactivitiesdata -> . partialintervals activities
    (19) intervals -> . intervals interval
    (20) intervals -> . interval
    (22) partialintervals -> . intervals semiinterval
    (23) partialintervals -> . semiinterval
    (21) interval -> . TIME TIME EOL
    (24) semiinterval -> . TIME EOL

    TIME            shift and go to state 10

    interval                       shift and go to state 9
    activitiesdatamult             shift and go to state 12
    semiinterval                   shift and go to state 13
    intervals                      shift and go to state 16
    activitiesdata                 shift and go to state 17
    partialintervals               shift and go to state 18
    partialactivitiesdata          shift and go to state 19
    projectdata                    shift and go to state 41
    partialactivitiesdatamult      shift and go to state 21

state 25

    (10) activitiesdatamult -> activitiesdatamult activitiesdata .

    TIME            reduce using rule 10 (activitiesdatamult -> activitiesdatamult activitiesdata .)
    PROJECT         reduce using rule 10 (activitiesdatamult -> activitiesdatamult activitiesdata .)
    $end            reduce using rule 10 (activitiesdatamult -> activitiesdatamult activitiesdata .)


state 26

    (13) partialactivitiesdatamult -> activitiesdatamult partialactivitiesdata .
    (15) partialactivitiesdatamult -> activitiesdatamult partialactivitiesdata . activitiesdatamult
    (10) activitiesdatamult -> . activitiesdatamult activitiesdata
    (11) activitiesdatamult -> . activitiesdata
    (12) activitiesdata -> . intervals activities
    (19) intervals -> . intervals interval
    (20) intervals -> . interval
    (21) interval -> . TIME TIME EOL

    PROJECT         reduce using rule 13 (partialactivitiesdatamult -> activitiesdatamult partialactivitiesdata .)
    $end            reduce using rule 13 (partialactivitiesdatamult -> activitiesdatamult partialactivitiesdata .)
    TIME            shift and go to state 39

    interval                       shift and go to state 9
    activitiesdatamult             shift and go to state 42
    intervals                      shift and go to state 38
    activitiesdata                 shift and go to state 17

state 27

    (6) projectsdata -> changeprojectinfo projectdata .

    PROJECT         reduce using rule 6 (projectsdata -> changeprojectinfo projectdata .)
    $end            reduce using rule 6 (projectsdata -> changeprojectinfo projectdata .)


state 28

    (5) changeprojectinfo -> PROJECT PROJECTNAME . EOL

    EOL             shift and go to state 43


state 29

    (12) activitiesdata -> intervals activities .
    (26) activities -> activities . activity
    (27) activity -> . taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
    (28) taskidentifier -> . TASKIDENTIFIER
    (29) taskidentifier -> . NA

    TIME            reduce using rule 12 (activitiesdata -> intervals activities .)
    PROJECT         reduce using rule 12 (activitiesdata -> intervals activities .)
    $end            reduce using rule 12 (activitiesdata -> intervals activities .)
    TASKIDENTIFIER  shift and go to state 31
    NA              shift and go to state 32

    taskidentifier                 shift and go to state 34
    activity                       shift and go to state 44

state 30

    (19) intervals -> intervals interval .

    TIME            reduce using rule 19 (intervals -> intervals interval .)
    TASKIDENTIFIER  reduce using rule 19 (intervals -> intervals interval .)
    NA              reduce using rule 19 (intervals -> intervals interval .)


state 31

    (28) taskidentifier -> TASKIDENTIFIER .

    LPARENTHESIS    reduce using rule 28 (taskidentifier -> TASKIDENTIFIER .)


state 32

    (29) taskidentifier -> NA .

    LPARENTHESIS    reduce using rule 29 (taskidentifier -> NA .)


state 33

    (22) partialintervals -> intervals semiinterval .

    TASKIDENTIFIER  reduce using rule 22 (partialintervals -> intervals semiinterval .)
    NA              reduce using rule 22 (partialintervals -> intervals semiinterval .)


state 34

    (27) activity -> taskidentifier . LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL

    LPARENTHESIS    shift and go to state 45


state 35

    (25) activities -> activity .

    TASKIDENTIFIER  reduce using rule 25 (activities -> activity .)
    NA              reduce using rule 25 (activities -> activity .)
    TIME            reduce using rule 25 (activities -> activity .)
    PROJECT         reduce using rule 25 (activities -> activity .)
    $end            reduce using rule 25 (activities -> activity .)


state 36

    (17) partialactivitiesdata -> partialintervals activities .
    (26) activities -> activities . activity
    (27) activity -> . taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
    (28) taskidentifier -> . TASKIDENTIFIER
    (29) taskidentifier -> . NA

    TIME            reduce using rule 17 (partialactivitiesdata -> partialintervals activities .)
    PROJECT         reduce using rule 17 (partialactivitiesdata -> partialintervals activities .)
    $end            reduce using rule 17 (partialactivitiesdata -> partialintervals activities .)
    TASKIDENTIFIER  shift and go to state 31
    NA              shift and go to state 32

    activity                       shift and go to state 44
    taskidentifier                 shift and go to state 34

state 37

    (14) partialactivitiesdatamult -> partialactivitiesdata activitiesdatamult .
    (10) activitiesdatamult -> activitiesdatamult . activitiesdata
    (12) activitiesdata -> . intervals activities
    (19) intervals -> . intervals interval
    (20) intervals -> . interval
    (21) interval -> . TIME TIME EOL

    PROJECT         reduce using rule 14 (partialactivitiesdatamult -> partialactivitiesdata activitiesdatamult .)
    $end            reduce using rule 14 (partialactivitiesdatamult -> partialactivitiesdata activitiesdatamult .)
    TIME            shift and go to state 39

    interval                       shift and go to state 9
    intervals                      shift and go to state 38
    activitiesdata                 shift and go to state 25

state 38

    (12) activitiesdata -> intervals . activities
    (19) intervals -> intervals . interval
    (25) activities -> . activity
    (26) activities -> . activities activity
    (21) interval -> . TIME TIME EOL
    (27) activity -> . taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
    (28) taskidentifier -> . TASKIDENTIFIER
    (29) taskidentifier -> . NA

    TIME            shift and go to state 39
    TASKIDENTIFIER  shift and go to state 31
    NA              shift and go to state 32

    activities                     shift and go to state 29
    taskidentifier                 shift and go to state 34
    activity                       shift and go to state 35
    interval                       shift and go to state 30

state 39

    (21) interval -> TIME . TIME EOL

    TIME            shift and go to state 23


state 40

    (21) interval -> TIME TIME EOL .

    TIME            reduce using rule 21 (interval -> TIME TIME EOL .)
    TASKIDENTIFIER  reduce using rule 21 (interval -> TIME TIME EOL .)
    NA              reduce using rule 21 (interval -> TIME TIME EOL .)


state 41

    (4) projectsdata -> projectsdata changeprojectinfo projectdata .

    PROJECT         reduce using rule 4 (projectsdata -> projectsdata changeprojectinfo projectdata .)
    $end            reduce using rule 4 (projectsdata -> projectsdata changeprojectinfo projectdata .)


state 42

    (15) partialactivitiesdatamult -> activitiesdatamult partialactivitiesdata activitiesdatamult .
    (10) activitiesdatamult -> activitiesdatamult . activitiesdata
    (12) activitiesdata -> . intervals activities
    (19) intervals -> . intervals interval
    (20) intervals -> . interval
    (21) interval -> . TIME TIME EOL

    PROJECT         reduce using rule 15 (partialactivitiesdatamult -> activitiesdatamult partialactivitiesdata activitiesdatamult .)
    $end            reduce using rule 15 (partialactivitiesdatamult -> activitiesdatamult partialactivitiesdata activitiesdatamult .)
    TIME            shift and go to state 39

    interval                       shift and go to state 9
    intervals                      shift and go to state 38
    activitiesdata                 shift and go to state 25

state 43

    (5) changeprojectinfo -> PROJECT PROJECTNAME EOL .

    TIME            reduce using rule 5 (changeprojectinfo -> PROJECT PROJECTNAME EOL .)


state 44

    (26) activities -> activities activity .

    TASKIDENTIFIER  reduce using rule 26 (activities -> activities activity .)
    NA              reduce using rule 26 (activities -> activities activity .)
    TIME            reduce using rule 26 (activities -> activities activity .)
    PROJECT         reduce using rule 26 (activities -> activities activity .)
    $end            reduce using rule 26 (activities -> activities activity .)


state 45

    (27) activity -> taskidentifier LPARENTHESIS . TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL

    TITLE           shift and go to state 46


state 46

    (27) activity -> taskidentifier LPARENTHESIS TITLE . RPARENTHESIS SEPARATOR ACTIVITY EOL

    RPARENTHESIS    shift and go to state 47


state 47

    (27) activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS . SEPARATOR ACTIVITY EOL

    SEPARATOR       shift and go to state 48


state 48

    (27) activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR . ACTIVITY EOL

    ACTIVITY        shift and go to state 49


state 49

    (27) activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY . EOL

    EOL             shift and go to state 50


state 50

    (27) activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .

    TASKIDENTIFIER  reduce using rule 27 (activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .)
    NA              reduce using rule 27 (activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .)
    TIME            reduce using rule 27 (activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .)
    PROJECT         reduce using rule 27 (activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .)
    $end            reduce using rule 27 (activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .)

